--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,16 @@
+name = "MeshPlotter"
+uuid = "badd6c13-c8c8-43ed-91ee-8f0dd6486d3a"
+authors = ["ArjunNarayanan <arjun.narayanan91@gmail.com> and contributors"]
+version = "0.1.0"
+
 [deps]
 PyPlot = "d330b81b-6aea-500a-939a-2ce795aea3ee"
+
+[compat]
+julia = "1"
+
+[extras]
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
+
+[targets]
+test = ["Test"]
